en libro click en saga y busca saga

--- a/public/css/libro.css
+++ b/public/css/libro.css
@@ -26,6 +26,11 @@ a:hover {
   color: #ffffff;
 }
 
+#saga {
+  color: #000000;
+  text-decoration: inherit;
+}
+
 .v-card {
     max-width:700px;
 	margin:0 auto;
