--- a/public/css/libro.css
+++ b/public/css/libro.css
@@ -31,6 +31,10 @@ a:hover {
   text-decoration: inherit;
 }
 
+#sinopsis {
+	resize: vertical;
+}
+
 .v-card {
     max-width:700px;
 	margin:0 auto;
